# dwg2ansys

./: AcadHost.cxx  AcadHost.h  CMakeLists.txt  CPackConfig.cmake  Convert.cxx  Convert.h  Model.cxx  Model.h  README  Serialize.cxx  SerializeBrep.cxx  dwg2ansysVersion.h.in  index.html  main.cxx
gui/: CMakeLists.txt  MainDialog.cxx  MainDialog.h  MainDialog.ui  main.cxx  resources.qrc
lib/: AcadHost.cxx  CMakeLists.txt  Convert.cxx  Convert.h  GeomDB.cxx  GeomDB.h  GeomDBBrep.cxx  Model.cxx  Model.h  Serialize.cxx  Serialize.h  SerializeBrep.cxx  SerializeBrep.h  dwg2ansysLibExport.h  dwg2ansysVersion.rc.in  internalTypes.cxx  internalTypes.h
